--- a/src/assets/app.properties
+++ b/src/assets/app.properties
@@ -3,6 +3,4 @@ app.class = quest.Questcraft
 app.version = 0.0.1
 app.gui = app.SWTApplication
 app.icon = /assets/images/sword-icon.png
-app.splashImage = /assets/images/wayne-chung.jpg
-app.splashSeconds = 4
-app.splashSound = /assets/sounds/wayne-chung.wav
+app.splash = quest.SplashScreen
